; ModuleID = '/home/carl/AnghaBench/toxcore/toxcore/extr_TCP_connection.c_add_tcp_relay_connection.c'
source_filename = "/home/carl/AnghaBench/toxcore/toxcore/extr_TCP_connection.c_add_tcp_relay_connection.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RECOMMENDED_FRIEND_TCP_CONNECTIONS = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @add_tcp_relay_connection(i32* %0, i32 %1, i32 %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32*, align 8
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32* %3, i32** %9, align 8
  %14 = load i32*, i32** %6, align 8
  %15 = load i32, i32* %7, align 4
  %16 = call i32* @get_connection(i32* %14, i32 %15)
  store i32* %16, i32** %10, align 8
  %17 = load i32*, i32** %10, align 8
  %18 = icmp ne i32* %17, null
  br i1 %18, label %20, label %19

19:                                               ; preds = %4
  store i32 -1, i32* %5, align 4
  br label %55

20:                                               ; preds = %4
  %21 = load i32*, i32** %6, align 8
  %22 = load i32*, i32** %9, align 8
  %23 = call i32 @find_tcp_connection_relay(i32* %21, i32* %22)
  store i32 %23, i32* %11, align 4
  %24 = load i32, i32* %11, align 4
  %25 = icmp ne i32 %24, -1
  br i1 %25, label %26, label %31

26:                                               ; preds = %20
  %27 = load i32*, i32** %6, align 8
  %28 = load i32, i32* %7, align 4
  %29 = load i32, i32* %11, align 4
  %30 = call i32 @add_tcp_number_relay_connection(i32* %27, i32 %28, i32 %29)
  store i32 %30, i32* %5, align 4
  br label %55

31:                                               ; preds = %20
  %32 = load i32*, i32** %10, align 8
  %33 = call i64 @online_tcp_connection_from_conn(i32* %32)
  %34 = load i64, i64* @RECOMMENDED_FRIEND_TCP_CONNECTIONS, align 8
  %35 = icmp sge i64 %33, %34
  br i1 %35, label %36, label %37

36:                                               ; preds = %31
  store i32 -1, i32* %5, align 4
  br label %55

37:                                               ; preds = %31
  %38 = load i32*, i32** %6, align 8
  %39 = load i32, i32* %8, align 4
  %40 = load i32*, i32** %9, align 8
  %41 = call i32 @add_tcp_relay_instance(i32* %38, i32 %39, i32* %40)
  store i32 %41, i32* %12, align 4
  %42 = load i32*, i32** %6, align 8
  %43 = load i32, i32* %12, align 4
  %44 = call i32* @get_tcp_connection(i32* %42, i32 %43)
  store i32* %44, i32** %13, align 8
  %45 = load i32*, i32** %13, align 8
  %46 = icmp ne i32* %45, null
  br i1 %46, label %48, label %47

47:                                               ; preds = %37
  store i32 -1, i32* %5, align 4
  br label %55

48:                                               ; preds = %37
  %49 = load i32*, i32** %10, align 8
  %50 = load i32, i32* %12, align 4
  %51 = call i32 @add_tcp_connection_to_conn(i32* %49, i32 %50)
  %52 = icmp eq i32 %51, -1
  br i1 %52, label %53, label %54

53:                                               ; preds = %48
  store i32 -1, i32* %5, align 4
  br label %55

54:                                               ; preds = %48
  store i32 0, i32* %5, align 4
  br label %55

55:                                               ; preds = %54, %53, %47, %36, %26, %19
  %56 = load i32, i32* %5, align 4
  ret i32 %56
}

declare dso_local i32* @get_connection(i32*, i32) #1

declare dso_local i32 @find_tcp_connection_relay(i32*, i32*) #1

declare dso_local i32 @add_tcp_number_relay_connection(i32*, i32, i32) #1

declare dso_local i64 @online_tcp_connection_from_conn(i32*) #1

declare dso_local i32 @add_tcp_relay_instance(i32*, i32, i32*) #1

declare dso_local i32* @get_tcp_connection(i32*, i32) #1

declare dso_local i32 @add_tcp_connection_to_conn(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
